# ta2a

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  logging_demonstration.py  manual_test.py  pyproject.toml  signals.db  simple_logging_test.py
config/: README.md  defaults.yaml  instruments.yaml  instruments.yaml.example
examples/: README.md  basic_usage.py  configuration_demo.py  data_ingestion_demo.py  plan_example.json  run_all_examples.py  state_machine_demo.py
scripts/: benchmark.py  dev_setup.py  error_handling_test.py  smoke_test.py  validate_config.py
ta2_app/: __init__.py  engine.py
ta2_app/config/: __init__.py  defaults.py  loader.py  signal_delivery.py  validation.py
ta2_app/data/: __init__.py  models.py  normalizer.py  parsers.py  plan_normalizer.py  validators.py
ta2_app/delivery/: __init__.py  base.py  file_delivery.py  http_delivery.py  stdout_delivery.py
ta2_app/errors/: __init__.py  data_quality.py  recovery.py  system_failures.py
ta2_app/logging/: __init__.py  config.py
ta2_app/metrics/: __init__.py  atr.py  calculator.py  candle_structure.py  orderbook.py  volume.py
ta2_app/models/: __init__.py  metrics.py
ta2_app/persistence/: __init__.py  signal_store.py
ta2_app/signals/: __init__.py
ta2_app/state/: __init__.py  machine.py  models.py  runtime.py  transitions.py
ta2_app/utils/: __init__.py  time.py
ta2_app/validation/: __init__.py  signal_schema.py
tests/: __init__.py  conftest.py  test_data_normalization.py
tests/errors/: test_error_handling.py
tests/integration/: test_full_pipeline.py  test_idempotency.py  test_invalidation_conditions.py  test_state_machine_integration.py  test_system_resilience.py  test_timestamp_semantics.py
tests/metrics/: __init__.py  test_atr.py  test_calculator.py  test_candle_structure.py  test_centralized_data_store.py  test_orderbook.py  test_volume.py
tests/persistence/: test_signal_store.py
tests/state/: __init__.py  test_logging_integration.py  test_machine.py  test_models.py  test_runtime.py  test_transitions.py
tests/unit/: test_config.py  test_engine.py  test_plan_normalizer.py
tests/utils/: test_time.py
